--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
           <li>Community forum</li>
           <li>Flashcard Decks</li>
           <li>New videos every week</li
-        </ul>
+          </ul>
+        </div>
       </div>
-    </body>
-    </html>
-  </div>
-</div>
+    </div>
+    <script src="./index.js"></script>
+  </body>
+</html>
